replaced JDK 1.5-specific code "Integer.valueOf(int)"